Ajout des photos des 3 iris

--- a/IA - ALGO DES K PLUS PROCHES VOISINS-CORRECTION.ipynb
+++ b/IA - ALGO DES K PLUS PROCHES VOISINS-CORRECTION.ipynb
@@ -74,7 +74,16 @@
     "\n",
     "Nous allons travailler en python sur une source de données regroupées dans un fichier csv. Ce fichier est nommé `iris.data`et est un jeu de données appelé [Iris de Fisher](https://fr.wikipedia.org/wiki/Iris_de_Fisher).\n",
     "\n",
-    "Le jeu de données comprend 50 échantillons de chacune des trois espèces d'iris (*Iris setosa*, *Iris virginica* et *Iris versicolor*).  Quatre caractéristiques ont été mesurées à partir de chaque échantillon : la longueur et la largeur des sépales et des pétales, en centimètres.\n",
+    "Le jeu de données comprend 50 échantillons de chacune des trois espèces d'iris (*Iris setosa*, *Iris virginica* et *Iris versicolor*).  \n",
+    "\n",
+    "| Iris setosa | Iris virginica | Iris versicolor |\n",
+    "|:-----------:|:--------------:|:---------------:|\n",
+    "|![IrisSetosa](./img/IrisSetosa.png) | ![IrisVirginica](./img/IrisVirginica.png) | ![IrisVersicolor](./img/IrisVersicolor.png) |  \n",
+    "\n",
+    "source des images : https://commons.wikimedia.org/wiki/Main_Page?uselang=fr  \n",
+    "Ce jeu de données est composé de 50 individus pour chacune des trois espèces (setosa, versicolor, virginica) soit 150 individus en tout.  \n",
+    "\n",
+    "Quatre caractéristiques ont été mesurées à partir de chaque échantillon : la longueur et la largeur des sépales et des pétales, en centimètres.\n",
     "\n",
     "Les données dans le fichier csv sont dans cet ordre :  \n",
     "longueur sépale, largeur sépale, longueur pétale, largeur pétale, nom espèce.\n",
