MAJ de quelques fautes de frappe...

--- a/IA - ALGO DES K PLUS PROCHES VOISINS-CORRECTION.ipynb
+++ b/IA - ALGO DES K PLUS PROCHES VOISINS-CORRECTION.ipynb
@@ -307,7 +307,7 @@
    "source": [
     "# 2- Réaliser un affichage graphique des données\n",
     "\n",
-    "Nous allons utliser la bibliothèque matplotlib pour afficher graphiquement nos points. Cette bibliothèque n'étant pas intégrée à python, il faudra peut être exéccuter la cellule suivante pour l'installer:"
+    "Nous allons utliser la bibliothèque matplotlib pour afficher graphiquement nos points. Cette bibliothèque n'étant pas intégrée à python, il faudra peut être exécuter la cellule suivante pour l'installer:"
    ]
   },
   {
