--- a/IA - ALGO DES K PLUS PROCHES VOISINS.ipynb
+++ b/IA - ALGO DES K PLUS PROCHES VOISINS.ipynb
@@ -199,7 +199,7 @@
    "source": [
     "# 2- Réaliser un affichage graphique des données\n",
     "\n",
-    "Nous allons utliser la bibliothèque matplotlib pour afficher graphiquement nos points. Cette bibliothèque n'étant pas intégrée à python, il faudra peut être exéccter la cellule suivante pour l'installer:"
+    "Nous allons utliser la bibliothèque matplotlib pour afficher graphiquement nos points. Cette bibliothèque n'étant pas intégrée à python, il faudra peut être exécuter la cellule suivante pour l'installer:"
    ]
   },
   {
