--- a/IA - ALGO DES K PLUS PROCHES VOISINS.ipynb
+++ b/IA - ALGO DES K PLUS PROCHES VOISINS.ipynb
@@ -78,7 +78,7 @@
     "\n",
     "| Iris setosa | Iris virginica | Iris versicolor |\n",
     "|:-----------:|:--------------:|:---------------:|\n",
-    "|![IrisSetosa](./img/IrisSetosa.png) | ![IrisVirginica](./img/IrisVirginica.png) | ![IrisVersicolor](./img/IrisVersicolor.png) |  \n",
+    "|![IrisSetosa](img/IrisSetosa.png) | ![IrisVirginica](img/IrisVirginica.png) | ![IrisVersicolor](img/IrisVersicolor.png) |  \n",
     "\n",
     "source des images : https://commons.wikimedia.org/wiki/Main_Page?uselang=fr  \n",
     "Ce jeu de données est composé de 50 individus pour chacune des trois espèces (setosa, versicolor, virginica) soit 150 individus en tout.  \n",
