Correction bug : </div> manquant

--- a/IA - ALGO DES K PLUS PROCHES VOISINS-CORRECTION.ipynb
+++ b/IA - ALGO DES K PLUS PROCHES VOISINS-CORRECTION.ipynb
@@ -27,7 +27,7 @@
    "source": [
     "# L'application Pl@ntNet\n",
     "\n",
-    "Nous allons commencer à partir d'un exemple d'utilisation de l'Intelligence Artificielle dans une application très utilisée actuellement : ![PlantNet](img/plantnet.png)\n",
+    "Nous allons commencer à partir d'un exemple d'utilisation de l'Intelligence Artificielle dans une application très utilisée actuellement : ![PlantNet](plantnet.png)\n",
     "\n",
     "Cette application permet la reconnaisance d'espèces et de variétés végétales à partir de photos. Le rôle de l'Intelligence Artificielle dans cette application est de \"deviner\" l'espèce végétale sur une photo. Elle s'appuie sur une base de données de photos identifiées lui servant de modèle d'apprentissage.\n",
     "\n",
@@ -51,17 +51,17 @@
     "\n",
     "On utilise pour commencer un ensemble d'apprentissage. On va partir du principe que nous avons un jeu de données contenant deux groupes : un groupe avec l'étiquette bleue, l'autre groupe avec l'étiquette rouge. Ces deux groupes ont chacun des caractéristiques (descripteurs) qui les placent soit dans les bleus soit dans les rouges. Une représentation graphique de ces deux groupes donnerait ainsi quelque chose comme ça :\n",
     "\n",
-    "![jeu-apprentissage](img/jeu-app.png)\n",
+    "![jeu-apprentissage](jeu-app.png)\n",
     "\n",
     "Pour un ensemble de données étiquetées $ D = \\{(x_1,e_1),...,(x_n,e_n)\\} $, les coordonnées $ x_i $ s'appellent des __*descripteurs*__ et l'élément $ e_i $ s'appelle l'__*étiquette*__ ou le __*label*__.\n",
     "\n",
     "L'**objectif** est de, à partir de cet ensemble d’apprentissage, déterminer une règle permettant de prédire l’étiquette de nouveaux points, dont on connaît seulement les __*descripteurs*__(coordonnées) mais pas l’__*étiquette*__.\n",
     "\n",
-    "![jeu-apprentissage](img/app1.png)\n",
+    "![jeu-apprentissage](app1.png)\n",
     "\n",
     "Le **principe** des **k plus proches voisins** est de considérer que l'étiquette du nouveau point sera l'étiquette majoritaire de ses k plus proches voisins.\n",
     "\n",
-    "![jeu-apprentissage](img/app2.png)![jeu-apprentissage](img/app3.png)\n",
+    "![jeu-apprentissage](app2.png)![jeu-apprentissage](app3.png)\n",
     "\n",
     "***On voit très bien que la prédiction de l'étiquette du point à deviner dépend donc de `k`.***"
    ]
@@ -74,16 +74,7 @@
     "\n",
     "Nous allons travailler en python sur une source de données regroupées dans un fichier csv. Ce fichier est nommé `iris.data`et est un jeu de données appelé [Iris de Fisher](https://fr.wikipedia.org/wiki/Iris_de_Fisher).\n",
     "\n",
-    "Le jeu de données comprend 50 échantillons de chacune des trois espèces d'iris (*Iris setosa*, *Iris virginica* et *Iris versicolor*).  \n",
-    "\n",
-    "| Iris setosa | Iris virginica | Iris versicolor |\n",
-    "|:-----------:|:--------------:|:---------------:|\n",
-    "|![IrisSetosa](img/IrisSetosa.png) | ![IrisVirginica](img/IrisVirginica.png) | ![IrisVersicolor](img/IrisVersicolor.png) |  \n",
-    "\n",
-    "source des images : https://commons.wikimedia.org/wiki/Main_Page?uselang=fr  \n",
-    "Ce jeu de données est composé de 50 individus pour chacune des trois espèces (setosa, versicolor, virginica) soit 150 individus en tout.  \n",
-    "\n",
-    "Quatre caractéristiques ont été mesurées à partir de chaque échantillon : la longueur et la largeur des sépales et des pétales, en centimètres.\n",
+    "Le jeu de données comprend 50 échantillons de chacune des trois espèces d'iris (*Iris setosa*, *Iris virginica* et *Iris versicolor*).  Quatre caractéristiques ont été mesurées à partir de chaque échantillon : la longueur et la largeur des sépales et des pétales, en centimètres.\n",
     "\n",
     "Les données dans le fichier csv sont dans cet ordre :  \n",
     "longueur sépale, largeur sépale, longueur pétale, largeur pétale, nom espèce.\n",
@@ -307,7 +298,7 @@
    "source": [
     "# 2- Réaliser un affichage graphique des données\n",
     "\n",
-    "Nous allons utliser la bibliothèque matplotlib pour afficher graphiquement nos points. Cette bibliothèque n'étant pas intégrée à python, il faudra peut être exécuter la cellule suivante pour l'installer:"
+    "Nous allons utliser la bibliothèque matplotlib pour afficher graphiquement nos points. Cette bibliothèque n'étant pas intégrée à python, il faudra peut être exéccuter la cellule suivante pour l'installer:"
    ]
   },
   {
@@ -1213,7 +1204,7 @@
     "\n",
     "Depuis son lancement en 2013, l’application Pl@ntNet développée par le Cirad, l’INRA, l’Inria, et l’IRD a permis d’identifier des dizaines de milliers de plantes photographiées partout dans le monde. Dans le cadre du partenariat avec Tela Botanica, une partie des observations faites via Pl@ntNet sont reversées dans la base Flora Data.  \n",
     "Si vous êtes inscrit à Tela Botanica, vous retrouverez donc vos photos identifiées par Pl@ntNet sur IdentiPlante, dans votre Carnet en Ligne, voire éventuellement sur eFlore.\n",
-    "![Tela Botanica](img/telabotanica.png)\n",
+    "![Tela Botanica](telabotanica.png)\n",
     "source : https://www.tela-botanica.org/2018/10/plantnet-mobile-sur-votre-ordinateur/\n",
     "</div>"
    ]
