MAJ documentation de certains codes

--- a/IA - ALGO DES K PLUS PROCHES VOISINS.ipynb
+++ b/IA - ALGO DES K PLUS PROCHES VOISINS.ipynb
@@ -709,12 +709,14 @@
     "def tauxErreur(k,trainData,testData):\n",
     "    maxErreurs = len(testData)\n",
     "    nombreErreurs = 0\n",
-    "    for indice in range (len(testData)):\n",
-    "        tempDatas = []\n",
-    "        tempDatas = [i for i in trainData]\n",
-    "        tempDatas.append(testData[indice])\n",
-    "        x,y = prediction(len(tempDatas)-1, k, tempDatas)\n",
-    "        if y == 1:\n",
+    "    for indice in range (len(testData)): # boucle sur toutes les données de notre jeu de test\n",
+    "        tempDatas = [i for i in trainData] # Je fais une copie de la liste\n",
+    "        # (un bon programmeur ne fait jamais ça, les données peuvent être nombreuses\n",
+    "        # et ça consomme des ressources. Je le fait ici sur une petite quantité de données\n",
+    "        # et permet de simplifier le code ailleurs...\n",
+    "        tempDatas.append(testData[indice]) # on ajoute à la fin de la liste le point de test que l'on veut tester\n",
+    "        x,y = prediction(len(tempDatas)-1, k, tempDatas) # On fait une prediction\n",
+    "        if y == 1: # on compte les erreurs\n",
     "            nombreErreurs += 1\n",
     "    print (\"Taux d'erreur : \", float((nombreErreurs)/len(testData)))"
    ]
